--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-thumbnail-extractor-app",
   "version": "0.1.0",
+  "private": true,
   "homepage": "https://antoniopacheco.github.io/react-thumbnail-extractor-demo/",
   "dependencies": {
     "gh-pages": "^2.1.1",
